crates/gridwell-writer-pandoc/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      []
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Message",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        0,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "Status:",
                        "t": "Str"
                      },
                      {
                        "t": "Space"
                      },
                      {
                        "c": [
                          {
                            "c": "degraded",
                            "t": "Str"
                          }
                        ],
                        "t": "Strong"
                      },
                      {
                        "t": "LineBreak"
                      },
                      {
                        "c": "Retry",
                        "t": "Str"
                      },
                      {
                        "t": "Space"
                      },
                      {
                        "c": "advised",
                        "t": "Str"
                      },
                      {
                        "c": [
                          {
                            "c": "†",
                            "t": "Str"
                          }
                        ],
                        "t": "Superscript"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": [
                        {
                          "c": "†",
                          "t": "Str"
                        }
                      ],
                      "t": "Superscript"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "See",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "runbook",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "section",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "4.",
                      "t": "Str"
                    }
                  ],
                  "t": "Para"
                }
              ]
            ]
          ]
        ]
      ]
    ]
  ],
  "t": "Table"
}
